@@ -2,26 +2,23 @@ package ru.nocode.recurlybilling.services;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.*;
 import ru.nocode.recurlybilling.data.dto.request.SubscriptionCancelRequest;
 import ru.nocode.recurlybilling.data.dto.request.SubscriptionCreateRequest;
 import ru.nocode.recurlybilling.data.dto.response.PaymentResponse;
 import ru.nocode.recurlybilling.data.dto.response.SubscriptionResponse;
 import ru.nocode.recurlybilling.data.entities.Customer;
+import ru.nocode.recurlybilling.data.entities.Invoice;
 import ru.nocode.recurlybilling.data.entities.Plan;
 import ru.nocode.recurlybilling.data.entities.Subscription;
-import ru.nocode.recurlybilling.data.repositories.CustomerRepository;
-import ru.nocode.recurlybilling.data.repositories.PlanRepository;
-import ru.nocode.recurlybilling.data.repositories.SubscriptionRepository;
+import ru.nocode.recurlybilling.data.repositories.*;
+import tools.jackson.databind.ObjectMapper;
 
 import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
@@ -39,6 +36,15 @@ class SubscriptionServiceTest {
     @Mock
     private PaymentService paymentService;
 
+    @Mock
+    private InvoiceRepository invoiceRepository;
+
+    @Mock
+    private TenantRepository tenantRepository;
+
+    @Mock
+    private ObjectMapper objectMapper;
+
     @InjectMocks
     private SubscriptionService subscriptionService;
 
@@ -49,12 +55,17 @@ class SubscriptionServiceTest {
 
     @Test
     void createSubscriptionWithSemesterPlanShouldSetNextBillingDateToNull() {
+        // given
         String tenantId = "moscow_digital_school";
-
         UUID planId = UUID.randomUUID();
         String planIdStr = planId.toString();
 
-        var request = new SubscriptionCreateRequest("user_12345", planIdStr, LocalDate.of(2025, 9, 1), "sbp");
+        var request = new SubscriptionCreateRequest(
+                "user_12345",
+                planIdStr,
+                LocalDate.of(2025, 9, 1),
+                "bank_card"
+        );
 
         Customer customer = new Customer();
         customer.setId(UUID.randomUUID());
@@ -66,43 +77,50 @@ class SubscriptionServiceTest {
         plan.setTenantId(tenantId);
         plan.setInterval("semester");
         plan.setPriceCents(400000L);
+        plan.setEndDate(LocalDate.of(2025, 12, 31));
 
         when(customerRepository.findByTenantIdAndExternalId(tenantId, "user_12345"))
                 .thenReturn(Optional.of(customer));
         when(planRepository.findByIdAndTenantId(planId, tenantId))
                 .thenReturn(Optional.of(plan));
         when(subscriptionRepository.findByTenantIdAndCustomerExternalId(anyString(), anyString()))
-                .thenReturn(java.util.Collections.emptyList());
+                .thenReturn(Collections.emptyList());
         when(subscriptionRepository.save(any(Subscription.class)))
                 .thenAnswer(inv -> inv.getArgument(0));
 
-        // Исправлено: возвращаем PaymentResponse вместо Invoice
         PaymentResponse mockPaymentResponse = new PaymentResponse(
                 "pay_123",
                 "pending",
                 "https://yoomoney.ru/checkout",
                 400000L,
                 "RUB",
-                LocalDateTime.now()
+                java.time.LocalDateTime.now()
         );
         when(paymentService.createPaymentForSubscription(any(Subscription.class)))
                 .thenReturn(mockPaymentResponse);
 
+        // when
         SubscriptionResponse response = subscriptionService.createSubscription(tenantId, request);
 
+        // then
         assertThat(response.nextBillingDate()).isNull();
         assertThat(response.currentPeriodEnd()).isEqualTo(LocalDate.of(2025, 12, 31));
         assertThat(response.status()).isEqualTo("active");
     }
 
     @Test
-    void createSubscriptionWithMonthlyPlanShouldSetNextBillingDate() {
+    void createSubscriptionWithDuplicateShouldThrowException() {
+        // given
         String tenantId = "moscow_digital_school";
-
         UUID planId = UUID.randomUUID();
         String planIdStr = planId.toString();
 
-        var request = new SubscriptionCreateRequest("user_12345", planIdStr, LocalDate.of(2025, 1, 1), "sbp");
+        var request = new SubscriptionCreateRequest(
+                "user_12345",
+                planIdStr,
+                LocalDate.of(2025, 1, 1),
+                "bank_card"
+        );
 
         Customer customer = new Customer();
         customer.setId(UUID.randomUUID());
@@ -116,38 +134,27 @@ class SubscriptionServiceTest {
         plan.setIntervalCount(1);
         plan.setPriceCents(100000L);
 
+        Subscription existing = new Subscription();
+        existing.setId(UUID.randomUUID());
+        existing.setPlanId(planId);
+        existing.setStatus("active");
+
         when(customerRepository.findByTenantIdAndExternalId(tenantId, "user_12345"))
                 .thenReturn(Optional.of(customer));
         when(planRepository.findByIdAndTenantId(planId, tenantId))
                 .thenReturn(Optional.of(plan));
         when(subscriptionRepository.findByTenantIdAndCustomerExternalId(anyString(), anyString()))
-                .thenReturn(java.util.Collections.emptyList());
-        when(subscriptionRepository.save(any(Subscription.class)))
-                .thenAnswer(inv -> {
-                    Subscription saved = inv.getArgument(0);
-                    saved.setId(UUID.randomUUID());
-                    return saved;
-                });
+                .thenReturn(List.of(existing));
 
-        PaymentResponse mockPaymentResponse = new PaymentResponse(
-                "pay_123",
-                "pending",
-                "https://yoomoney.ru/checkout",
-                100000L,
-                "RUB",
-                LocalDateTime.now()
-        );
-        when(paymentService.createPaymentForSubscription(any(Subscription.class)))
-                .thenReturn(mockPaymentResponse);
-
-        SubscriptionResponse response = subscriptionService.createSubscription(tenantId, request);
-
-        assertThat(response.nextBillingDate()).isEqualTo(LocalDate.of(2025, 2, 2));
-        assertThat(response.currentPeriodEnd()).isEqualTo(LocalDate.of(2025, 2, 1));
+        // when/then
+        assertThatThrownBy(() -> subscriptionService.createSubscription(tenantId, request))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("already exists");
     }
 
     @Test
     void cancelSubscriptionWithCancelAtEndOfPeriodShouldSetCancelAtToPeriodEnd() {
+        // given
         String tenantId = "moscow_digital_school";
         String subscriptionId = UUID.randomUUID().toString();
 
@@ -164,9 +171,73 @@ class SubscriptionServiceTest {
 
         var cancelRequest = new SubscriptionCancelRequest(false);
 
+        // when
         SubscriptionResponse response = subscriptionService.cancelSubscription(tenantId, subscriptionId, cancelRequest);
 
+        // then
         assertThat(response.status()).isEqualTo("cancelled");
         assertThat(response.currentPeriodEnd()).isEqualTo(LocalDate.of(2025, 12, 31));
+    }
+
+    @Test
+    void handlePaymentFailedShouldSetStatusToPastDue() {
+        // given
+        UUID subscriptionId = UUID.randomUUID();
+
+        Subscription subscription = new Subscription();
+        subscription.setId(subscriptionId);
+        subscription.setStatus("active");
+
+        Invoice failedInvoice = new Invoice();
+        failedInvoice.setId(UUID.randomUUID());
+        failedInvoice.setStatus("failed");
+
+        when(subscriptionRepository.findById(subscriptionId))
+                .thenReturn(Optional.of(subscription));
+        when(invoiceRepository.findBySubscriptionIdAndStatusOrderByCreatedAtDesc(subscriptionId, "failed"))
+                .thenReturn(List.of(failedInvoice));
+        when(subscriptionRepository.save(any(Subscription.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
+
+        // when
+        subscriptionService.handlePaymentFailed(subscriptionId);
+
+        // then
+        assertThat(subscription.getStatus()).isEqualTo("past_due");
+        verify(subscriptionRepository, times(1)).save(subscription);
+    }
+
+    @Test
+    void processBillingForTenantShouldCreatePaymentsForDueSubscriptions() {
+        // given
+        String tenantId = "moscow_digital_school";
+        UUID subscriptionId = UUID.randomUUID();
+
+        Subscription subscription = new Subscription();
+        subscription.setId(subscriptionId);
+        subscription.setTenantId(tenantId);
+        subscription.setStatus("active");
+        subscription.setNextBillingDate(LocalDate.now());
+
+        when(subscriptionRepository.findByTenantIdAndStatusAndNextBillingDateBefore(
+                eq(tenantId), eq("active"), any(LocalDate.class)))
+                .thenReturn(List.of(subscription));
+
+        PaymentResponse mockPaymentResponse = new PaymentResponse(
+                "pay_123",
+                "pending",
+                "https://yoomoney.ru/checkout",
+                100000L,
+                "RUB",
+                java.time.LocalDateTime.now()
+        );
+        when(paymentService.createPaymentForSubscription(any(Subscription.class)))
+                .thenReturn(mockPaymentResponse);
+
+        // when
+        subscriptionService.processBillingForTenant(tenantId);
+
+        // then
+        verify(paymentService, times(1)).createPaymentForSubscription(subscription);
     }
 }
